# group-project-python

./: 404.html  Dockerfile.backend  Dockerfile.frontend  PROJECT_README.md  README.md  function_app.py  index.html  mkdocs.yml  prediction.py  pyproject.toml  requirements.txt
.github/workflows/: backend.yaml  frontend.yml
.streamlit/: config.toml
Streamlit/: index.html
api/: index.html
backend/: main.py  requirements.txt
docs/: Streamlit.md  api.md  index.md  marimo_notebook.md  pipeline.md  prediction.md
frontend/: app.py
marimo_notebook/: index.html
models/: telco_logistic_regression.joblib
notebooks/: telco_marimo.py
pipeline/: index.html
prediction/: index.html
search/: search_index.json
tests/: test_prediction.py
