[project]
name = "telco-churn-predictions"
version = "0.1.0"
description = "Predicting churn in a telco"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.24.0",
    "fastapi>=0.124.0",
    "joblib>=1.5.2",
    "marimo>=0.17.8",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic>=2",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.0",
    "pytest>=9.0.1",
]
